--- a/app/new-items.html
+++ b/app/new-items.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:500,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,500,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway:700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/libs.min.css">
     <link rel="stylesheet" href="css/style.min.css">
@@ -218,12 +218,8 @@
                 <div class="container">
                     <div class="breadcrumbs__inner">
                         <ul class="breadcrumbs__list">
-                            <li>
-                                <a href="#">Home</a>
-                            </li>
-                            <li>
-                                <a href="#">Product Page</a>
-                            </li>
+                            <li><a href="#">Home</a></li>
+                            <li><span>Product Page</span></li>
                         </ul>
                     </div>
                 </div>
