--- a/app/contacts.html
+++ b/app/contacts.html
@@ -220,7 +220,7 @@
                     <div class="breadcrumbs__inner">
                         <ul class="breadcrumbs__list">
                             <li><a href="#">Home</a></li>
-                            <li><span>About US</span></li>
+                            <li><span>Contact Us</span></li>
                         </ul>
                     </div>
                 </div>
@@ -232,32 +232,54 @@
 
             <!-- start about page -->
 
-            <section class="about">
+            <section class="contact">
                 <div class="container">
-                    <div class="about__wrapper">
-                        <div class="about__head">
-                            To Know Who We Are
+                    <div class="contact__wrapper">
+                        <div class="contact__head">
+                            Contact With Us
                         </div>
-                        <div class="about__inner">
-                            <div class="about__box">
-                                <h3>What We Do</h3>
-                                <p>
-                                    when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centurbut a vfrrdyrtfglso survived but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised
-                                    in the 1960s with the releas survived not raseth leap into electronic typesetting, remaining essentially unchanged. when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has
-                                    survived not only five centurbut a vfrrdyrtfglso survived but also the leap into electronic typesetting, remaining essentially unchanged. It was po pularised in the 1960s with the releas survived not rasethleap into
-                                    electronic typesetting, remaining essentially unchanged.
-                                </p>
+                        <div class="contact__inner">
+                            <div class="contact__map">
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d50420.93061420932!2d144.94306110584353!3d-37.82967095137873!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad65d4cee0cec83%3A0xd019c5f69915a4a0!2zQ29sbGlucyBTdCwgTWVsYm91cm5lIFZJQywg0JDQstGB0YLRgNCw0LvQuNGP!5e0!3m2!1sru!2sua!4v1582547796686!5m2!1sru!2sua"
+                                    frameborder="0" style="border:0;" allowfullscreen=""></iframe>
                             </div>
-                            <div class="about__box">
-                                <h3>Our Mission</h3>
-                                <p>
-                                    when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centurbut a vfrrdyrtfglso survived but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised
-                                    in the 1960s with the releas survived not raseth leap into electronic typesetting, remaining essentially unchanged. when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has
-                                    survived not only five centurbut a vfrrdyrtfglso survived but also the leap into electronic typesetting, remaining essentially unchanged. It was po pularised in the 1960s with the releas survived not rasethleap into
-                                    electronic typesetting, remaining essentially unchanged.
-                                </p>
-                            </div>
+                            <div class="contact__box">
+                                <div class="contact__info">
 
+                                    <div class="contact__info-item">
+                                        <div class="contact__info-title icon-map-marker">Our Office Address</div>
+                                        <div class="contact__info-content">
+                                            PO Box 16122 Collins Street West Victoria 8007 Australia
+                                        </div>
+                                    </div>
+
+                                    <div class="contact__info-item">
+                                        <div class="contact__info-title icon-phone">Phone</div>
+                                        <a href="tel:61383766284" class="contact__info-content">
+                                            +61 3 8376 6284
+                                        </a>
+                                    </div>
+
+                                    <div class="contact__info-item">
+                                        <div class="contact__info-title icon-envelope-o">E-mail</div>
+                                        <div class="contact__info-content">
+                                            info@foxtar.com
+                                        </div>
+                                    </div>
+
+                                </div>
+                                <div class="contact__form">
+                                    <div class="contact__form-title">Drop Us A Message </div>
+                                    <form>
+                                        <div class="contact__form-row">
+                                            <input type="text" placeholder="Name*" required>
+                                            <input type="text" placeholder="E-mail*" required>
+                                        </div>
+                                        <textarea placeholder="Message*" required></textarea>
+                                        <button type="submit">Send Message</button>
+                                    </form>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
