--- a/app/settings.html
+++ b/app/settings.html
@@ -7,10 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,500,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway:700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/libs.min.css">
     <link rel="stylesheet" href="css/style.min.css">
-    <title>contact.html</title>
+    <title>settings.html</title>
 </head>
 
 <body>
@@ -191,6 +190,7 @@
 
             <!-- end header -->
 
+
             <!-- start search  -->
 
             <section class="search page-search" style="background-image: url(img/search-bg.jpg);">
@@ -220,7 +220,7 @@
                     <div class="breadcrumbs__inner">
                         <ul class="breadcrumbs__list">
                             <li><a href="#">Home</a></li>
-                            <li><span>Contact Us</span></li>
+                            <li><span>Settings</span></li>
                         </ul>
                     </div>
                 </div>
@@ -229,64 +229,275 @@
 
             <!-- end breadcrumbs -->
 
-
-            <!-- start about page -->
-
-            <section class="contact">
+            <!-- start settings  -->
+            <div class="settings">
                 <div class="container">
-                    <div class="contact__wrapper">
-                        <div class="contact__head">
-                            Contact With Us
+                    <div class="product-one__tabs settings__tabs">
+                        <div class="tabs">
+                            <span class="tab active angle-right" data-id="1">Personal Information</span>
+                            <span class="tab angle-right" data-id="2">Profile</span>
+                            <span class="tab angle-right" data-id="3">Badges</span>
+                            <span class="tab angle-right" data-id="4">E-mail Settings</span>
+                            <span class="tab angle-right" data-id="4">Social Network</span>
                         </div>
-                        <div class="contact__inner">
-                            <div class="contact__map">
-                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d50420.93061420932!2d144.94306110584353!3d-37.82967095137873!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad65d4cee0cec83%3A0xd019c5f69915a4a0!2zQ29sbGlucyBTdCwgTWVsYm91cm5lIFZJQywg0JDQstGB0YLRgNCw0LvQuNGP!5e0!3m2!1sru!2sua!4v1582547796686!5m2!1sru!2sua"
-                                    frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+                        <div class="tab_content">
+                            <div class="tab-item" id="1">
+
+                                <div class="page-box">
+                                    <div class="page-box__title">
+                                        Personal Information
+                                    </div>
+                                    <div class="page-box__content">
+                                        <form>
+
+                                            <div class="settings__line">
+                                                <label>First Name</label>
+                                                <input type="text">
+                                            </div>
+
+                                            <div class="settings__line">
+                                                <label>Last Name</label>
+                                                <input type="text">
+                                            </div>
+
+                                            <div class="settings__line">
+                                                <label>Company Name</label>
+                                                <input type="text">
+                                            </div>
+
+                                            <div class="settings__line">
+                                                <label>Country</label>
+                                                <select>
+                                                    <option>Select Your Country</option>
+                                                    <option>Select Your Country</option>
+                                                    <option>Select Your Country</option>
+                                                </select>
+                                            </div>
+
+                                            <div class="settings__line">
+                                                <label>Address Line 1</label>
+                                                <input type="text">
+                                            </div>
+
+                                            <div class="settings__line">
+                                                <label>Address Line 2</label>
+                                                <input type="text">
+                                            </div>
+
+                                            <div class="settings__line">
+                                                <label>City</label>
+                                                <input type="text">
+                                            </div>
+
+                                            <div class="settings__line">
+                                                <label>State / Province / Region</label>
+                                                <input type="text">
+                                            </div>
+
+                                            <div class="settings__line">
+                                                <label>Zip / Postal Code</label>
+                                                <input type="text">
+                                            </div>
+
+                                        </form>
+                                    </div>
+                                </div>
+
                             </div>
-                            <div class="contact__box">
-                                <div class="contact__info">
+                            <div class="tab-item" id="2">
 
-                                    <div class="contact__info-item">
-                                        <div class="contact__info-title icon-map-marker">Our Office Address</div>
-                                        <div class="contact__info-content">
-                                            PO Box 16122 Collins Street West Victoria 8007 Australia
-                                        </div>
+                                <div class="page-box">
+                                    <div class="page-box__title">
+                                        Personal Information
                                     </div>
+                                    <div class="page-box__content">
+                                        <form>
 
-                                    <div class="contact__info-item">
-                                        <div class="contact__info-title icon-phone">Phone</div>
-                                        <a href="tel:61383766284" class="contact__info-content">
-                                            +61 3 8376 6284
-                                        </a>
+                                            <div class="settings__line">
+                                                <label>First Name</label>
+                                                <input type="text">
+                                            </div>
+
+                                            <div class="settings__line">
+                                                <label>Last Name</label>
+                                                <input type="text">
+                                            </div>
+
+                                            <div class="settings__line">
+                                                <label>Company Name</label>
+                                                <input type="text">
+                                            </div>
+
+                                            <div class="settings__line">
+                                                <label>Country</label>
+                                                <select>
+                                                    <option>Select Your Country</option>
+                                                    <option>Select Your Country</option>
+                                                    <option>Select Your Country</option>
+                                                </select>
+                                            </div>
+
+                                            <div class="settings__line">
+                                                <label>Address Line 1</label>
+                                                <input type="text">
+                                            </div>
+
+                                            <div class="settings__line">
+                                                <label>Address Line 2</label>
+                                                <input type="text">
+                                            </div>
+
+                                            <div class="settings__line">
+                                                <label>City</label>
+                                                <input type="text">
+                                            </div>
+
+                                            <div class="settings__line">
+                                                <label>State / Province / Region</label>
+                                                <input type="text">
+                                            </div>
+
+                                            <div class="settings__line">
+                                                <label>Zip / Postal Code</label>
+                                                <input type="text">
+                                            </div>
+
+                                        </form>
                                     </div>
-
-                                    <div class="contact__info-item">
-                                        <div class="contact__info-title icon-envelope-o">E-mail</div>
-                                        <div class="contact__info-content">
-                                            info@foxtar.com
-                                        </div>
-                                    </div>
-
                                 </div>
-                                <div class="contact__form">
-                                    <div class="contact__form-title">Drop Us A Message </div>
-                                    <form>
-                                        <div class="contact__form-row">
-                                            <input type="text" placeholder="Name*" required>
-                                            <input type="text" placeholder="E-mail*" required>
-                                        </div>
-                                        <textarea placeholder="Message*" required></textarea>
-                                        <button type="submit">Send Message</button>
-                                    </form>
+
+                            </div>
+                            <div class="tab-item" id="3">
+
+                                <div class="page-box">
+                                    <div class="page-box__title">
+                                        Personal Information
+                                    </div>
+                                    <div class="page-box__content">
+                                        <form>
+
+                                            <div class="settings__line">
+                                                <label>First Name</label>
+                                                <input type="text">
+                                            </div>
+
+                                            <div class="settings__line">
+                                                <label>Last Name</label>
+                                                <input type="text">
+                                            </div>
+
+                                            <div class="settings__line">
+                                                <label>Company Name</label>
+                                                <input type="text">
+                                            </div>
+
+                                            <div class="settings__line">
+                                                <label>Country</label>
+                                                <select>
+                                                    <option>Select Your Country</option>
+                                                    <option>Select Your Country</option>
+                                                    <option>Select Your Country</option>
+                                                </select>
+                                            </div>
+
+                                            <div class="settings__line">
+                                                <label>Address Line 1</label>
+                                                <input type="text">
+                                            </div>
+
+                                            <div class="settings__line">
+                                                <label>Address Line 2</label>
+                                                <input type="text">
+                                            </div>
+
+                                            <div class="settings__line">
+                                                <label>City</label>
+                                                <input type="text">
+                                            </div>
+
+                                            <div class="settings__line">
+                                                <label>State / Province / Region</label>
+                                                <input type="text">
+                                            </div>
+
+                                            <div class="settings__line">
+                                                <label>Zip / Postal Code</label>
+                                                <input type="text">
+                                            </div>
+
+                                        </form>
+                                    </div>
                                 </div>
+
+                            </div>
+                            <div class="tab-item" id="4">
+
+                                <div class="page-box">
+                                    <div class="page-box__title">
+                                        Personal Information
+                                    </div>
+                                    <div class="page-box__content">
+                                        <form>
+
+                                            <div class="settings__line">
+                                                <label>First Name</label>
+                                                <input type="text">
+                                            </div>
+
+                                            <div class="settings__line">
+                                                <label>Last Name</label>
+                                                <input type="text">
+                                            </div>
+
+                                            <div class="settings__line">
+                                                <label>Company Name</label>
+                                                <input type="text">
+                                            </div>
+
+                                            <div class="settings__line">
+                                                <label>Country</label>
+                                                <select>
+                                                    <option>Select Your Country</option>
+                                                    <option>Select Your Country</option>
+                                                    <option>Select Your Country</option>
+                                                </select>
+                                            </div>
+
+                                            <div class="settings__line">
+                                                <label>Address Line 1</label>
+                                                <input type="text">
+                                            </div>
+
+                                            <div class="settings__line">
+                                                <label>Address Line 2</label>
+                                                <input type="text">
+                                            </div>
+
+                                            <div class="settings__line">
+                                                <label>City</label>
+                                                <input type="text">
+                                            </div>
+
+                                            <div class="settings__line">
+                                                <label>State / Province / Region</label>
+                                                <input type="text">
+                                            </div>
+
+                                            <div class="settings__line">
+                                                <label>Zip / Postal Code</label>
+                                                <input type="text">
+                                            </div>
+
+                                        </form>
+                                    </div>
+                                </div>
+
                             </div>
                         </div>
                     </div>
                 </div>
-            </section>
-
-            <!-- end about page -->
-
+            </div>
+            <!-- end settings  -->
 
         </div>
 
